--- a/src/stylesheets/application.css
+++ b/src/stylesheets/application.css
@@ -6,8 +6,13 @@
 @import "tailwindcss/components";
 
 @keyframes rotate {
-  from { transform: rotate3d(0, 0, 1, 0deg) }
-  to { transform: rotate3d(0, 0, 1, 360deg) }
+  from {
+    transform: rotate3d(0, 0, 1, 0deg)
+  }
+
+  to {
+    transform: rotate3d(0, 0, 1, 360deg)
+  }
 }
 
 .rotate {
