--- a/src/stylesheets/application.css
+++ b/src/stylesheets/application.css
@@ -1,17 +1,21 @@
-@import "tailwindcss/base";
-@import "tailwindcss/utilities";
+@import 'tailwindcss/base';
+@import 'tailwindcss/utilities';
 
-@import "_buttons.css";
+@import '_buttons.css';
 
-@import "tailwindcss/components";
+@import 'tailwindcss/components';
+
+body {
+  @apply .font-sans .leading-normal .subpixel-antialiased .bg-white;
+}
 
 @keyframes rotate {
   from {
-    transform: rotate3d(0, 0, 1, 0deg)
+    transform: rotate3d(0, 0, 1, 0deg);
   }
 
   to {
-    transform: rotate3d(0, 0, 1, 360deg)
+    transform: rotate3d(0, 0, 1, 360deg);
   }
 }
 
