--- a/src/stylesheets/_buttons.css
+++ b/src/stylesheets/_buttons.css
@@ -24,7 +24,6 @@
   @apply .bg-purple-700;
 }
 
-
 /* Discret colors ------------------------------------------------------------- */
 
 .btn-discret {
@@ -33,5 +32,5 @@
 
 .btn-discret:hover:not(:disabled),
 .btn-discret:focus:not(:disabled) {
-  @apply .text-black .bg-gray-400;
+  @apply .text-gray-900 .bg-gray-400;
 }
